--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 export BOT_TOKEN=379191071:AAGz_nDaSRAla8IajKhY8MxGJ-_AutNT12s
-export WEBHOOK_URL=https://a6ffc9cf.ngrok.io
+export WEBHOOK_URL=https://ce49acaa.ngrok.io
+export ADMINS=[]
