--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 export BOT_TOKEN=379191071:AAGz_nDaSRAla8IajKhY8MxGJ-_AutNT12s
-export WEBHOOK_URL=https://ebb7b1c6.ngrok.io
-export ADMINS=[]
+export WEBHOOK_URL=https://fd6971bd.ngrok.io
+export ADMINS=[205271106]
