--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 export BOT_TOKEN=379191071:AAGz_nDaSRAla8IajKhY8MxGJ-_AutNT12s
 export WEBHOOK_URL=https://77f37f61.ngrok.io
-export ADMINS=[]
+export ADMINS=[205271106]
