Add login by telegram

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 export BOT_TOKEN=379191071:AAEzD-heUC8s7YAToc3fTxn_dckrynB7jAM
-export WEBHOOK_URL=https://da88cd37.ngrok.io
-export ADMINS=[]
+export WEBHOOK_URL=https://f7341e26.ngrok.io
+export ADMINS=[205271106]
