--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 export BOT_TOKEN=379191071:AAEzD-heUC8s7YAToc3fTxn_dckrynB7jAM
-export WEBHOOK_URL=https://54a18cc3.ngrok.io
-export ADMINS=[]
+export WEBHOOK_URL=https://48ab8074.ngrok.io
+export ADMINS=[205271106]
